test/visibility/use-no-qualified/only-list-error2.good
only-list-error2.chpl:10: In function 'main':
only-list-error2.chpl:11: error: 'A' undeclared (first use this function)
